<resources>

    <string name="app_name">Ensa Market Place</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="branch">Filière</string>
    <string name="register_underline"><u>Créer un</u></string>
    <string name="login_underline"><u>Login</u></string>
    <string name="edit">Modifier le profil</string>
    <string name="add_img">Ajouter une image</string>
    <string name="price">Prix en DH</string>
    <string name="save">Sauvegarder</string>
    <string name="add_new_ann">Ajouter une annonce</string>
    <string name="ann_title">Titre</string>
    <string name="ann_type">Type</string>
    <string name="ann_fici">Filière ciblée</string>
    <string name="ann_desc">Description</string>
    <string name="ann_img">Image</string>
    <string name="ann_add">Ajouter</string>
    <string name="ann_serv">Service</string>
    <string name="ann_prod">Produit</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="auth_email_hint">Adresse email</string>
    <string name="auth_password_hint">Mot de passe</string>
    <string name="auth_name_hint">Nom</string>
    <string name="auth_branch_hint">Veuillez entrer votre branch</string>
    <string name="auth_phone_hint">téléphone</string>
    <string name="vous_avez_pas_de_compte">Vous n avez pas de compte?</string>
    <string name="upload_img">Ajouter une image</string>
    <string name="vous_avez_deja_un_compte">Vous avez déja un compte?</string>
    <string name="target_client">Les clients cibles</string>
    <string name="gi">GI</string>
    <string name="cp">CP</string>
    <string name="ge">GR</string>
    <string name="grt">GRT</string>
    <string name="glm">GIL</string>
    <string name="elmcs">elmcs</string>
    <string name="service">Service</string>
    <string name="product">Produit</string>
    <string name="avatar">avatar</string>
    <string name="suivant">next</string>
    <string name="valider">valider</string>
    <string name="retourner">back</string>
    <string name="optionel">*optionel</string>
</resources>