<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0"
    android:background="#00DF1818"
    android:backgroundTintMode="screen"
    android:foregroundTint="#FFFFFF"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/addbutton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:alpha="1"
        android:backgroundTint="@color/main_color"
        android:onClick="addNewAnnouncement"
        android:text="@string/valider"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImage" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginEnd="260dp"
        android:backgroundTint="@color/main_color"
        android:onClick="backToStepOne"
        android:text="@string/retourner"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/addbutton"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/price"
        style="@style/input"
        android:layout_width="340dp"
        android:layout_height="51dp"
        android:layout_marginTop="184dp"
        android:alpha="1"
        android:background="@drawable/stoke_background"
        android:drawableLeft="@drawable/ic_price"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="phone"
        android:textColor="#000000"
        android:textColorHint="#78909C"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/input_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="76dp"
        android:text="@string/add_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price">

        <RadioButton
            android:id="@+id/radioButton4"
            style="@style/branch"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/product"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/radioButton2"
            style="@style/branch"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:text="@string/service"
            tools:ignore="TouchTargetSizeCheck" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        style="@style/optionel_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/optionel"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <ImageView
        android:id="@+id/uploadImage"
        android:layout_width="205dp"
        android:layout_height="182dp"
        android:layout_marginTop="32dp"
        android:onClick="getImageFromGallery"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/ic_baseline_cloud_upload_24" />

</androidx.constraintlayout.widget.ConstraintLayout>