<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/input"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00DF1818"
    android:backgroundTint="#FFFFFF"
    android:backgroundTintMode="screen"
    android:foregroundTint="#FFFFFF"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="366dp"
        android:layout_height="610dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.496">

        <EditText
            android:id="@+id/emaill"
            style="@style/input"
            android:layout_width="340dp"
            android:layout_height="51dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="88dp"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:ems="10"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#78909C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/name"
            style="@style/input"
            android:layout_width="340dp"
            android:layout_height="51dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_baseline_person_outline_24"
            android:ems="10"
            android:hint="@string/auth_name_hint"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#78909C"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emaill" />

        <EditText
            android:id="@+id/phone"
            style="@style/input"
            android:layout_width="340dp"
            android:layout_height="51dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_baseline_phone_iphone_24"
            android:ems="10"
            android:hint="@string/auth_phone_hint"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#78909C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <Button
            android:id="@+id/save"
            android:layout_width="284dp"
            android:layout_height="48dp"
            android:layout_marginBottom="116dp"
            android:backgroundTint="@color/main_color"
            android:onClick="save"
            android:text="@string/save"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioGroup
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone">

            <RadioButton
                android:id="@+id/cp"
                style="@style/branch"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:buttonTint="#EF0000"
                android:checked="true"
                android:text="@string/cp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/gi"
                style="@style/branch"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/gi"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/gr"
                style="@style/branch"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/ge"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/grt"
                style="@style/branch"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/grt"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/gil"
                style="@style/branch"
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:text="@string/glm"
                tools:ignore="TouchTargetSizeCheck" />

        </RadioGroup>

        <ProgressBar
            android:id="@+id/loadingIcon"
            style="@style/loadingIcon"
            android:layout_width="102dp"
            android:layout_height="108dp"
            android:layout_marginTop="108dp"
            android:indeterminateTint="@color/loading_color"
            android:rotation="6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            style="@style/authentication_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/edit"
            android:textColor="@color/main_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="81dp"
        android:layout_height="83dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sun" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_bar_radius"
        app:backgroundTint="@color/main_color"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>